res/d.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: xo
  labels:
    app: istio-experiments
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: xo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: xo
        app: istio-experiments
        version: 1.0.3
    spec:
      containers:
        - name: main
          imagePullPolicy: Never
          image: xo
