res/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: generic-gateway
spec:
  selector:
    istio: ingress-gw
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 8080
        name: grpc
        protocol: GRPC
      hosts:
        - '*'
#    - port:
#        number: 8081
#        name: httpx
#        protocol: HTTP
#      hosts:
#        - '*'
