res/c.yaml
kind: Service
apiVersion: v1
metadata:
  name: gobrowserd
  labels:
    app.kubernetes.io/name: gobrowserd
spec:
  ports:
    - name: grpc
      protocol: TCP
      port: 13004
      targetPort: 13004
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gobrowserd
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gobrowserd
  labels:
    app: istio-experiments-secondary
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: gobrowserd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gobrowserd
        app: istio-experiments-secondary
        version: 1.0.0
    spec:
      containers:
        - name: main
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              name: http
          image: docker.io/library/pook:1
          volumeMounts:
            - name: config
              mountPath: /conf
      volumes:
        - name: config
          configMap:
            name: gobrowserd
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vgbd
spec:
  hosts:
    - '*'
  gateways:
    - istio-ingress/generic-gateway
  http:
    - match:
        - uri:
            prefix: /com.bumble.contract.service.gobrowserd
      route:
        - destination:
            port:
              number: 13004
            host: gobrowserd
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gobrowserd
spec:
  host: gobrowserd
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
